# Vortex

./: .clang-format  .clang-tidy  CMakeLists.txt  vortex-official-module-catalog.yaml
Sandbox/: CMakeLists.txt  Main.cpp  main.cpp
VortexEngine/: Bid.h  VortexEngine.h
VortexEngine/src/: Bid.cpp  CommonMacros.h  PlatformMacros.h
VortexGoodbye/: CMakeLists.txt  VortexGoodbye.h
VortexGoodbye/src/: VortexGoodbye.cpp
VortexHelloWorld/: CMakeLists.txt  VortexHelloWorld.h
VortexHelloWorld/src/: VortexHelloWorld.cpp
cmake/: Vortex.cmake
tools/vbuild/: Agents.md  CMakeLists.txt
tools/vbuild/Docs/: Manifests.md
tools/vbuild/src/: Main.cpp
